Added serve package

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-ui/node_modules"
   ],
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "serve": "^11.3.2"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,5 @@
     "create-react-app",
     "react"
   ],
-  "license": "MIT",
-  "devDependencies": {}
+  "license": "MIT"
 }
