--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "start": "node server",
-    "build": "cd react-ui/ && npm install && npm run build"
+    "react-ui-install": "cd react-ui/ && npm install",
+    "build": "npm run build"
   },
   "cacheDirectories": [
     "node_modules",
