--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node server",
     "react-ui-install": "cd react-ui/ && npm install",
-    "build": "npm run build"
+    "build": "cd react-ui/ && npm run build"
   },
   "cacheDirectories": [
     "node_modules",
