--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "node server",
     "react-ui-install": "cd react-ui/ && npm install",
-    "build": "cd react-ui/ && npm run build"
+    "build": "cd react-ui/ && npm run build",
+    "test": "cd react-ui/ && npm run test"
   },
   "cacheDirectories": [
     "node_modules",
